<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SharingActivity">


    <TextView
        android:id="@+id/sharing_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/clicker_script"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/share_this_app_with_your_friends_to_keep_them_up_to_date_with_news_from_around_the_world_we_are_sure_that_the_conversations_will_be_more_interesting_for_you_because_you_will_have_many_topics_to_talk_about"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sharing_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareImage" />

    <Button
        android:id="@+id/sharing_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/share_this_app"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharing_message" />

    <ImageView
        android:id="@+id/shareImage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/sharing_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shareimage" />

</androidx.constraintlayout.widget.ConstraintLayout>