<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">


    <ImageView
        android:id="@+id/coverimage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newsimage" />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/click_here"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coverimage"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/clicker_script"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:text="@string/find_out_the_latest_news_from_the_world_or_just_have_fun"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nextbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/coverimage"
        app:layout_constraintTop_toTopOf="@id/coverimage"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>